Add function to allow form's values to be recorded

--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
                 <div class="book-details">
                   <div class="input-box">
                     <span class="details">Author Name </span>
-                    <input type="text" name="authorName" id="" required />
+                    <input type="text" name="authorName" id="author" required />
                   </div>
                   <div class="input-box">
                     <span class="details">Book Title </span>
-                    <input type="text" name="bookTitle" id="" required />
+                    <input type="text" name="bookTitle" id="title" required />
                   </div>
                   <div class="input-box">
                     <span class="details">Number of Pages </span>
-                    <input type="number" name="pageNum" id="" required />
+                    <input type="number" name="pageNum" id="num" required />
                   </div>
                   <div class="radio-details">
                     <span class="details">Have you read this before? </span>
@@ -130,8 +130,8 @@
                     <label for="no">No</label>
                   </div>
                   <div class="submitOrClear">
-                    <input type="reset" value="Reset" />
-                    <input type="submit" />
+                    <input type="reset" value="Reset" id="reset" />
+                    <input type="submit" id="submit" />
                   </div>
                 </div>
               </form>
