Add function to allow checkbox to change depending on the user

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
               <td>L.M. Montgomery</td>
               <td>Anne of Green Gables</td>
               <td>284</td>
-              <td><input type="checkbox" name="read" id="read" /></td>
+              <td>
+                <input type="checkbox" name="read" id="read" />
+              </td>
               <td>
                 <button class="deleteButton">
                   <svg style="width: 24px; height: 24px" viewBox="0 0 24 24">
@@ -41,7 +43,9 @@
               <td>Kiera Cass</td>
               <td>The Selection</td>
               <td>328</td>
-              <td><input type="checkbox" name="read" id="read" /></td>
+              <td>
+                <input type="checkbox" name="read" id="read" />
+              </td>
               <td>
                 <button class="deleteButton">
                   <svg style="width: 24px; height: 24px" viewBox="0 0 24 24">
