Fix issue of form not clearing once submit button is pressed

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <button data-close-button class="closeButton">&times;</button>
             </div>
             <div class="modalNewBody">
-              <form action="">
+              <form action="" id="userForm">
                 <div class="book-details">
                   <div class="input-box">
                     <span class="details">Author Name </span>
@@ -134,7 +134,7 @@
                     <label for="no">No</label>
                   </div>
                   <div class="submitOrClear">
-                    <input type="reset" value="Reset" id="reset" />
+                    <input type="reset" value="Reset" id="resetButton" />
                     <input type="submit" id="submit" />
                   </div>
                 </div>
