--- a/index.html
+++ b/index.html
@@ -12,52 +12,17 @@
       <div class="main-content">
         <table class="libraryTable">
           <thead>
-            <tr>
-              <th>Author</th>
-              <th>Book Title</th>
-              <th>Number of Pages</th>
-              <th>Read</th>
-              <th>Delete</th>
-            </tr>
+            <div>
+              <tr class="tableHeader">
+                <th>Author</th>
+                <th>Book Title</th>
+                <th>Number of Pages</th>
+                <th>Read</th>
+                <th>Delete</th>
+              </tr>
+            </div>
           </thead>
-          <tbody>
-            <tr class="bookExample1">
-              <td>L.M. Montgomery</td>
-              <td>Anne of Green Gables</td>
-              <td>284</td>
-              <td>
-                <input type="checkbox" name="read" id="read" />
-              </td>
-              <td>
-                <button class="deleteButton">
-                  <svg style="width: 24px; height: 24px" viewBox="0 0 24 24">
-                    <path
-                      fill="currentColor"
-                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
-                    />
-                  </svg>
-                </button>
-              </td>
-            </tr>
-            <tr class="bookExample2">
-              <td>Kiera Cass</td>
-              <td>The Selection</td>
-              <td>328</td>
-              <td>
-                <input type="checkbox" name="read" id="read" />
-              </td>
-              <td>
-                <button class="deleteButton">
-                  <svg style="width: 24px; height: 24px" viewBox="0 0 24 24">
-                    <path
-                      fill="currentColor"
-                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
-                    />
-                  </svg>
-                </button>
-              </td>
-            </tr>
-          </tbody>
+          <tbody></tbody>
         </table>
       </div>
       <div class="sidebar">
