Add ability to not accept empty values

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <button data-close-button class="closeButton">&times;</button>
             </div>
             <div class="modalNewBody">
-              <form action="" id="userForm">
+              <form action="" method="" id="userForm">
                 <div class="book-details">
                   <div class="input-box">
                     <span class="details">Author Name </span>
